<resources>
    <string name="app_name">PokeDex</string>
    <string name="poke_ball_icon">Poke Ball Icon</string>
    <string name="poke_dex_title">Poke Dex Title</string>
    <string name="et_search_hint">Search by name</string>
    <string name="pokemon">Pokemon</string>
    <string name="icon_sort">Sorting</string>
    <string name="icon_arrow">Icon Arrow</string>
    <string name="hash_tag">#</string>
    <string name="top_text">A</string>
    <string name="bottom_text">Z</string>
    <string name="icon_search">Search</string>
    <string name="back_button">Back Button</string>
    <string name="about">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="moves">Moves</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="satk">SATK</string>
    <string name="sdef">SDEF</string>
    <string name="spd">SPD</string>
    <string name="arrow_left">arrow_left</string>
    <string name="arrow_right">arrow_right</string>
    <string name="weight_unit">%dKg</string>
    <string name="height_unit">%dm</string>
    <string name="evolutions">Evolutions</string>
    <string name="title_activity_main">MainActivity</string>
</resources>