<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".presentation.ui.activity.HomeActivity">

    <LinearLayout
        android:id="@+id/container_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poke_ball_icon"
            app:srcCompat="@drawable/ic_pokeball"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/poke_dex_title"
            app:srcCompat="@drawable/poke_dex"/>
    </LinearLayout>

    <com.example.pokedex.presentation.ui.widget.ButtonSortingView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="10sp"
        android:lineHeight="16sp"
        android:padding="4dp"
        android:fontFamily="@font/regular"
        android:background="@drawable/bg_search_field"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/et_search_hint"
        app:layout_constraintTop_toBottomOf="@id/container_icon"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_poke"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>