<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:background="@color/type_grass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="@id/tv_poke_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_poke_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_poke_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            tools:text="Bulbasaur"/>

        <TextView
            android:id="@+id/tv_poke_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            style="@style/TextAppearance.AppCompat.Bold"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/tv_poke_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_poke_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="#001"/>

        <ImageView
            android:id="@+id/iv_bg_pokeball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poke_ball_icon"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_poke_transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/container_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_details"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/iv_bg_pokeball"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/iv_pokemon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/pokemon"
            android:layout_marginBottom="-64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container_details"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/container_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/iv_pokemon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Bold"
            android:textColor="@color/type_grass"
            android:text="@string/about"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:lineHeight="16sp"
            app:layout_constraintTop_toBottomOf="@id/container_types"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_about"
            app:layout_constraintBottom_toBottomOf="@id/container_details">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/view_attributes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    layout="@layout/view_attributes"
                    android:layout_marginHorizontal="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_poke_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintTop_toBottomOf="@id/view_attributes"
                    tools:text="There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger."/>

                <TextView
                    android:id="@+id/tv_base_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Bold"
                    android:textColor="@color/type_grass"
                    android:text="@string/base_stats"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:lineHeight="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_poke_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <include
                    android:id="@+id/view_stats"
                    layout="@layout/view_stats"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_base_stats"/>

                <TextView
                    android:id="@+id/tv_evolutions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Bold"
                    android:text="@string/evolutions"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:lineHeight="16sp"
                    app:layout_constraintTop_toBottomOf="@id/view_stats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_evolutions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_evolutions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include layout="@layout/view_shimmer_detail"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>