<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/hp"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_hp"/>

    <TextView
        android:id="@+id/tv_hp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_hp"
        app:layout_constraintBottom_toBottomOf="@id/tv_hp"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_hp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_hp_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_hp_value"
        app:layout_constraintStart_toEndOf="@id/tv_hp_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_atk"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/atk"
        android:textAlignment="textEnd"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_atk_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_atk"
        app:layout_constraintBottom_toBottomOf="@id/tv_atk"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_atk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_atk_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_atk_value"
        app:layout_constraintStart_toEndOf="@id/tv_atk_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_def"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/def"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_atk"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_def_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_def"
        app:layout_constraintBottom_toBottomOf="@id/tv_def"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_def"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_def_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_def_value"
        app:layout_constraintStart_toEndOf="@id/tv_def_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_satk"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/satk"
        android:textAlignment="textEnd"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_def"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_satk_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_satk"
        app:layout_constraintBottom_toBottomOf="@id/tv_satk"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_satk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_satk_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_satk_value"
        app:layout_constraintStart_toEndOf="@id/tv_satk_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_sdef"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/sdef"
        android:textAlignment="textEnd"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_satk"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_sdef_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_sdef"
        app:layout_constraintBottom_toBottomOf="@id/tv_sdef"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_sdef"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_sdef_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_sdef_value"
        app:layout_constraintStart_toEndOf="@id/tv_sdef_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_spd"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Bold"
        android:textColor="@color/type_grass"
        android:text="@string/spd"
        android:textAlignment="textEnd"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_sdef"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_spd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        style="@style/TextAppearance.AppCompat.Regular"
        android:textColor="@color/dark_gray"
        android:textAlignment="textEnd"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/tv_spd"
        app:layout_constraintBottom_toBottomOf="@id/tv_spd"
        app:layout_constraintStart_toEndOf="@id/separator"
        tools:text="045"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_spd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_spd_value"
        app:layout_constraintBottom_toBottomOf="@id/tv_spd_value"
        app:layout_constraintStart_toEndOf="@id/tv_spd_value"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>